--- a/BackgroundDownloadDemo/BackgroundDownloadDemo/Base.lproj/Main.storyboard
+++ b/BackgroundDownloadDemo/BackgroundDownloadDemo/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10117" systemVersion="15G1004" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="oGr-UO-eQg">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10116" systemVersion="15B42" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="oGr-UO-eQg">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
@@ -50,18 +50,43 @@
                                     <action selector="continueDownlaod:" destination="oGr-UO-eQg" eventType="touchUpInside" id="9eM-H1-sqo"/>
                                 </connections>
                             </button>
+                            <progressView opaque="NO" contentMode="scaleToFill" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="uNy-iF-Jm3">
+                                <rect key="frame" x="112" y="201" width="150" height="2"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="150" id="5ih-zz-r3H"/>
+                                    <constraint firstAttribute="height" constant="2" id="NRz-lu-GBo"/>
+                                </constraints>
+                            </progressView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="0%" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="niH-l7-szN">
+                                <rect key="frame" x="137" y="172" width="100" height="21"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="100" id="KYb-VT-Ter"/>
+                                    <constraint firstAttribute="height" constant="21" id="Tjw-9d-QRZ"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" red="0.2156862745" green="0.50196078430000002" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstItem="PjF-Or-fJX" firstAttribute="centerX" secondItem="EWJ-9P-CnB" secondAttribute="centerX" id="7xc-eJ-1nB"/>
                             <constraint firstItem="wlK-Gi-WW4" firstAttribute="centerX" secondItem="EWJ-9P-CnB" secondAttribute="centerX" id="Hjm-3W-XaC"/>
+                            <constraint firstItem="uNy-iF-Jm3" firstAttribute="centerX" secondItem="EWJ-9P-CnB" secondAttribute="centerX" id="QHE-Od-NXV"/>
+                            <constraint firstItem="uNy-iF-Jm3" firstAttribute="top" secondItem="niH-l7-szN" secondAttribute="bottom" constant="8" id="R9F-yQ-Kfd"/>
+                            <constraint firstItem="niH-l7-szN" firstAttribute="centerX" secondItem="EWJ-9P-CnB" secondAttribute="centerX" id="RfK-mo-Vzk"/>
                             <constraint firstItem="PjF-Or-fJX" firstAttribute="centerY" secondItem="EWJ-9P-CnB" secondAttribute="centerY" id="URt-p0-1iP"/>
                             <constraint firstItem="ZFY-VG-pit" firstAttribute="centerX" secondItem="EWJ-9P-CnB" secondAttribute="centerX" id="Wn3-ge-nbl"/>
+                            <constraint firstItem="ZFY-VG-pit" firstAttribute="top" secondItem="uNy-iF-Jm3" secondAttribute="bottom" constant="28" id="je8-3k-Z0l"/>
                             <constraint firstItem="PjF-Or-fJX" firstAttribute="top" secondItem="ZFY-VG-pit" secondAttribute="bottom" constant="28" id="mC3-1Q-5A4"/>
                             <constraint firstItem="wlK-Gi-WW4" firstAttribute="top" secondItem="PjF-Or-fJX" secondAttribute="bottom" constant="26" id="v4Z-j6-hPH"/>
                         </constraints>
                     </view>
                     <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina47"/>
+                    <connections>
+                        <outlet property="downloadProgress" destination="uNy-iF-Jm3" id="KXW-cL-iKx"/>
+                        <outlet property="progressLabel" destination="niH-l7-szN" id="N2V-m8-L4V"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="zTA-Bj-GC0" sceneMemberID="firstResponder"/>
             </objects>
